# MobileWIFIGHT

./: .gitignore  ARCHITECTURE.md  COMPLETE_GUIDE.md  CONTRACTS.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  FINAL_STATUS.md  FINAL_VERIFICATION.md  HONEST_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PROGRESS.md  LICENSE  PROJECT_STATUS.md  README.md  RUN_APP.md  START_HERE.md  TEST_PLAN.md
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  adapter.py  attacks.py  captures.py  cracking.py  reports.py  scanner.py  wordlists.py
backend/app/core/: config.py
backend/app/models/: __init__.py  adapter.py  attack.py  cracking.py  network.py  report.py  scan.py
backend/app/services/: __init__.py  adapter.py  attack.py  capture.py  cracker.py  cracker_remote.py  interfaces.py  report.py  scanner.py
backend/app/tests/: conftest.py  test_adapter_service.py  test_attack_service.py  test_capture_service.py  test_cracker_service.py  test_models.py  test_report_service.py  test_scanner_service.py
backend/app/tools/: __init__.py  aircrack.py  hashcat.py  hcxtools.py  network.py  vastai.py  wordlists.py  wps.py
frontend/: .gitignore  index.html  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/electron/: main.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: models.ts
frontend/src/views/: Attacks.tsx  Cracking.tsx  Dashboard.tsx  Scanner.tsx  Wordlists.tsx
scripts/: download-wordlists.py  install.sh  run-e2e-tests.sh  start-backend.sh  start-frontend.sh
